# lecture-live-translator

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py  models.py
app/services/: batch.py  gcp_helpers.py  realtime.py  storage.py  subtitles.py  translation.py
app/static/: app.js  styles.css
app/templates/: index.html
scripts/: gcp-login.ps1  start.ps1
tests/: test_duration_helpers.py  test_subtitles.py
